2006.05.06

* Added a beginning sketch of JSON over TCP in protocols.json.
* Some protocol tweaks.
* Added test top-level directory as well as an adytum.twisted-level test
directory.
* Converted a.t.w2.jsonrpc and the client portion of a.t.w.jsonrpc to use the
NetstringReceiver protocol for JSON-RPC over TCP.
* Removed protocol code, since we don't need a custom protocol for JSON-RCP
over TCP.

2006.05.05

* Added directory place holders and __init__.py files.
* Added basic files.
* Copied jsonrpc.py from the adytum library.
* Moved proto-jsonrpclib code out of a.t.web.jsonrpc and into
adytum.jsonrpclib.
* Added copies of t.w2.xmlrpc and tests and renamed them to jsonrpc.
* a.t.w2.jsonrpc has been ported and passes all tests.
* Updated setup.py.
* Added ez_setup.py.
* Added client and server examples.
* Made adytum and adytum.twisted setuptools namespaces.
* Updated the example client.
* Updated the TODO file.