@@ -8,6 +8,11 @@ directory.
 NetstringReceiver protocol for JSON-RPC over TCP.
 * Removed protocol code, since we don't need a custom protocol for JSON-RCP
 over TCP.
+* Commented out the support for returning a dict with keys "result" and
+"error" as it seems like unessary overhead for now. Someone convince me
+otherwise, and I'll put it back in.
+* Changed methodology for adding subhandlers.
+* Fixed introspection.
 
 2006.05.05
 
